[package]
name = "geopagg"
version = "0.1.2"
edition = "2021"
description = "An implementation of the geopagg algorithm for p-value aggregation of sgRNAs across gene groupings"
license = "MIT"
documentation = "https://docs.rs/geopagg"
repository = "https://github.com/noamteyssier/geopagg"
keywords = ["CRISPR", "bioinformatics", "sequencing", "sgRNA"]
categories = ["science"]

[dependencies]
adjustp = "0.1.6"
anyhow = "1.0.86"
approx = "0.5.1"
derive-new = "0.6.0"
itertools = "0.13.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"

[profile.release]
lto = true
